[package]
authors = ["Trent Shailer"]
description = "Various helper functions, structures, and traits for creating my APIs."
edition = "2024"
license = "MIT OR Apache-2.0"
name = "ts-api-helper"
rust-version = "1.88"
version = "0.3.0"

[dependencies]
axum = { version = "0.8", default-features = false, features = ["json", "macros"] }
tokio = { version = "1.45", default-features = false, features = ["sync"] }

jiff = { version = "0.2", features = ["serde"] }

log = "0.4"

bb8 = "0.9"
bb8-postgres = { version = "0.9" }
tokio-postgres = "0.7"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

reqwest = { version = "0.12", features = ["json"] }

base64ct = { version = "1.8", features = ["alloc"] }
openssl = { version = "0.10" }

[features]
vendor-openssl = ["openssl/vendored"]

[lints.rust]
"missing_docs" = "warn"
"rust_2018_idioms" = "warn"
"unused_qualifications" = "warn"

[lints.clippy]
"as_conversions" = "warn"
"cast_lossless" = "warn"
"exhaustive_enums" = "warn"
"inconsistent_struct_constructor" = "warn"
"todo" = "warn"
"unnecessary_self_imports" = "warn"
"use_self" = "warn"
